cmake/tests: only use generic target_link_libraries

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,7 +16,7 @@ set(DBCSR_PERF_SRCS
 add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
 target_link_libraries(dbcsr_perf dbcsr)
 if (OpenMP_FOUND)
-  target_link_libraries(dbcsr_perf PRIVATE OpenMP::OpenMP_Fortran)
+  target_link_libraries(dbcsr_perf OpenMP::OpenMP_Fortran)
 endif ()
 
 file(GLOB DBCSR_PERF_TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
@@ -75,7 +75,7 @@ foreach (dbcsr_test ${DBCSR_TESTS})
     add_test(NAME ${dbcsr_test} COMMAND ./${dbcsr_test})
   endif ()
   if (OpenMP_FOUND)
-    target_link_libraries(${dbcsr_test} PRIVATE OpenMP::OpenMP_Fortran)
+    target_link_libraries(${dbcsr_test} OpenMP::OpenMP_Fortran)
     set_tests_properties(${dbcsr_test} PROPERTIES ENVIRONMENT OMP_NUM_THREADS=${TEST_OMP_THREADS})
   endif ()
 endforeach ()
