--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ set(DBCSR_PERF_SRCS
   dbcsr_performance_multiply.F)
 add_executable(dbcsr_perf ${DBCSR_PERF_SRCS})
 target_link_libraries(dbcsr_perf dbcsr)
+set_target_properties(dbcsr_perf PROPERTIES LINKER_LANGUAGE Fortran)
 if (OpenMP_FOUND)
   target_link_libraries(dbcsr_perf OpenMP::OpenMP_Fortran)
 endif ()
@@ -71,6 +72,7 @@ target_link_libraries(dbcsr_unittest_common dbcsr)
 foreach (dbcsr_test ${DBCSR_TESTS})
   add_executable(${dbcsr_test} ${${dbcsr_test}_SRCS})
   target_link_libraries(${dbcsr_test} dbcsr_unittest_common)
+  set_target_properties(${dbcsr_test} PROPERTIES LINKER_LANGUAGE Fortran)
   # register unittest executable with CMake
   if (USE_MPI)
     separate_arguments(MPIEXEC_PREFLAGS)
