--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ jobs:  # the following jobs inherit only the first OS
   include:
   - name: "Build and test MPI+OpenMP version with make"
     script:
-    - make -j FC="mpif90" LD="mpif90" OPTFLAGS="-fprofile-arcs -ftest-coverage -O0 -D__MPI_VERSION=2" CHECKS=1 LEAKS=0 all
+    - make -j FC="mpif90" LD="mpif90" OPTFLAGS="-fprofile-arcs -ftest-coverage -O0" CHECKS=1 LEAKS=0 all
     - make test
     - bash <(curl -s https://codecov.io/bash)
   - name: "Run pre-commit hook on changed files"
