Ignore ATOM tags

--- a/.gitignore
+++ b/.gitignore
@@ -223,6 +223,6 @@ Session.vim
 .netrwhist
 # auto-generated tag files
 tags
-
+.tags
 
 # End of https://www.gitignore.io/api/vim,emacs,python,fortran
