ROCm/HIP backend: initial commit
 - add possibly redundant files just to get the first version
compiling ...
- get it to compile (change CMakeLists.txt)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,7 +8,11 @@ set(DBCSR_PROGRAM_SRCS
 # register each program source file as executable
 foreach (dbcsr_program_src ${DBCSR_PROGRAM_SRCS})
   get_filename_component(dbcsr_program_name ${dbcsr_program_src} NAME_WE)
-  add_executable(${dbcsr_program_name} ${dbcsr_program_src})
+  if (USE_HIP)
+    hip_add_executable(${dbcsr_program_name} ${dbcsr_program_src})
+  else ()
+    add_executable(${dbcsr_program_name} ${dbcsr_program_src})
+  endif ()
   target_link_libraries(${dbcsr_program_name} dbcsr)
 
   # with the Intel compiler CMake 3.12 seems to forget that the source is actually Fortran
@@ -17,7 +21,11 @@ foreach (dbcsr_program_src ${DBCSR_PROGRAM_SRCS})
 endforeach ()
 
 if (WITH_C_API)
-  add_executable(dbcsr_example_3_cpp dbcsr_example_3.cpp)
+  if (USE_HIP)
+    hip_add_executable(dbcsr_example_3_cpp dbcsr_example_3.cpp)
+  else ()
+    add_executable(dbcsr_example_3_cpp dbcsr_example_3.cpp)
+  endif ()
   target_link_libraries(dbcsr_example_3_cpp dbcsr_c MPI::MPI_CXX)
 
   if (CMAKE_CXX_COMPILER_ID STREQUAL "Cray")
