--- a/src/acc/libsmm_acc/libhipsmm/CMakeLists.txt
+++ b/src/acc/libsmm_acc/libhipsmm/CMakeLists.txt
@@ -10,14 +10,14 @@ set(CUSMM_KERNELS
 )
 
 add_custom_command(
-  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_parameters.py --gpu_version=${WITH_GPU} --base_dir=${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_parameters.py --gpu_version=${WITH_GPU} --base_dir=${CMAKE_CURRENT_SOURCE_DIR}
   DEPENDS generate_parameters.py parameters_${WITH_GPU}.json
   OUTPUT parameters.h
   COMMENT "libhipsmm: generating parameters for GPU ${WITH_GPU}"
 )
 
 add_custom_command(
-  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_kernels.py ${CMAKE_CURRENT_SOURCE_DIR}/kernels
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate_kernels.py ${CMAKE_CURRENT_SOURCE_DIR}/kernels
   DEPENDS generate_kernels.py ${CUSMM_KERNELS}
   OUTPUT cusmm_kernels.h
   COMMENT "libhipsmm: generating kernels"
@@ -29,7 +29,20 @@ set(LIBHIPSMM_SRC_FILES
 )
 
 set_source_files_properties(${LIBHIPSMM_SRC_FILES} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
-hip_add_library(libhipsmm STATIC ${LIBHIPSMM_SRC_FILES})
+
+# Workaround bug in ROCm's "Findhip.cmake".
+hip_add_library(libhipsmm STATIC
+# once the bug is fixed, replace by the following line:
+# hip_add_library(libhipsmm OBJECT
+    libhipsmm.cpp
+    libhipsmm_benchmark.cpp
+    parameters.h
+    cusmm_kernels.h
+)
+install(TARGETS libhipsmm
+  EXPORT libcusmmTargets
+  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 
 if (OpenMP_FOUND)
   # with CMake 3.12+ the following can be replaced by:
@@ -48,4 +61,4 @@ target_include_directories(libhipsmm SYSTEM PRIVATE
   ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
   )
 
-target_compile_definitions(libhipsmm PRIVATE -DARCH_NUMBER=${CUDA_ARCH_NUMBER})
+target_compile_definitions(libhipsmm PRIVATE -DARCH_NUMBER=${HIP_ARCH_NUMBER})
