--- a/tests/libhipsmm_timer_multiply.template
+++ b/tests/libhipsmm_timer_multiply.template
@@ -9,13 +9,13 @@
 
 #include <cstdio>
 #include <cstdlib>
-#include <cuda_runtime.h>
+#include <hip/hip_runtime.h>
 #include <vector>
 #include <array>
 #include <algorithm>
-#include "acc/libsmm_acc/libcusmm/libcusmm_benchmark.h"
-#include "acc/libsmm_acc/libcusmm/libcusmm.h"
-#include "acc/libsmm_acc/libcusmm/parameters.h"
+#include "acc/libsmm_acc/libhipsmm/libhipsmm_benchmark.h"
+#include "acc/libsmm_acc/libhipsmm/libhipsmm.h"
+#include "acc/libsmm_acc/libhipsmm/parameters.h"
 
 std::vector<Triplet> combinations(std::vector<int> to_combine){
 
@@ -33,7 +33,7 @@ std::vector<Triplet> combinations(std::vector<int> to_combine){
 
 /****************************************************************************\
   \brief Checks correctness of and measures performance of randomly selected
-         libcusmm multiplication kernels.
+         libhipsmm multiplication kernels.
   \returns -1 for invalid options, n>0 with n being the number of errors,
            0 otherwise
   \****************************************************************************/
